[package]
name = "mqtt2influxdb"
version = "0.1.0"
edition = "2021"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
description = "CLI tool to convert MQTT messages to InfluxDB write queries"

[dependencies]
env_logger = "0.9"
log = "0.4"
clap = { version = "3.0", features = ["derive"] }

tokio = { version = "1.20", features = ["full"] }
rumqttc = { version = "0.15", features = ["url"] }
influxdb_rs = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.2"