[package]
name = "mqtt2influxdb"
version = "0.1.1"
edition = "2021"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
description = "CLI tool to push MQTT messages to InfluxDB2"
homepage = "https://github.com/Wassasin/mqtt2influxdb"
repository = "https://github.com/Wassasin/mqtt2influxdb"
license = "MIT"
keywords = ["influxdb", "mqtt", "cli"]
categories = ["command-line-utilities"]

exclude = ["/examples"]

[dependencies]
env_logger = "0.10"
log = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }

tokio = { version = "1.20", features = ["rt-multi-thread"] }
rumqttc = { version = "0.18", features = ["url"] }
influxdb_rs = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.2"
